demo/ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: grafana
  namespace: metrics
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /example
            pathType: Exact
            backend:
              service:
                name: nginx
                port:
                  number: 80
